<resources>
    <string name="app_name">Avengers</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="logo">logo</string>
    <string name="hi">hi</string>
    <string name="android_development_with_arwaz">Android development with Arwaz</string>
    <string name="preference_file_name">Avenger Preference</string>
    <string name="logout">Logout</string>
    <string name="sign_up_for_facebook">Sign Up for Facebook</string>
    <string name="_91_1234567895">+91 1234567895</string>
    <string name="natasha_starkindustries_com">natasha@starkindustries.com</string>
    <string name="natasha_romanoff">Natasha Romanoff</string>
    <string name="black_widow">black widow</string>
    <string name="iron_man">iron man</string>
    <string name="tony_stark">Tony Stark</string>
    <string name="_91_1234567896">+91 1234567896</string>
    <string name="tchalla_starkindustries_com">tchalla@starkindustries.com</string>
    <string name="t_challa">T\' Challa</string>
    <string name="black_panther">black panther</string>
    <string name="_91_1234567897">+91 1234567897</string>
    <string name="bruce_starkindustries_com">bruce@starkindustries.com</string>
    <string name="bruce_banner">Bruce Banner</string>
    <string name="hulk">hulk</string>
    <string name="_91_1234567898">+91 1234567898</string>
    <string name="thor_starkindustries_com">thor@starkindustries.com</string>
    <string name="thor_odinson">Thor Odinson</string>
    <string name="thor">thor</string>
    <string name="_91_1234567899">+91 1234567899</string>
    <string name="steve_starkindustries_com">steve@starkindustries.com</string>
    <string name="steve_rogers">Steve Rogers</string>
    <string name="captain_america">captain America</string>
    <string name="_91_7240974211">+91 7240974211</string>
    <string name="tony_starkindustries_com">tony@starkindustries.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot">forgot?</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have an account? Sign Up</string>
</resources>